hpg-code/logs/preprocess_emotion_attack_43364349.log
  File "/blue/ruogu.fang/akshayashok/emotion_adversarial_attack/code/process_data.py", line 19
    if not os.path.exists(os.path.join(processed_dir, 'train'):
                                                              ^
SyntaxError: invalid syntax
Tue Sep  3 19:43:26 EDT 2024
c0706a-s2.ufhpc
/blue/ruogu.fang/akshayashok/emotion_adversarial_attack/code
